# csv2fhir-transformer-and-validation-server

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  DOCS_INDEX.txt  FINAL_SUMMARY.txt  GETTING_STARTED.md  OVERVIEW.txt  QUICK_START.md  README.md  README_SETUP.md  SETUP_COMPLETE.md  START_HERE.md  YOU_ARE_HERE.md  main.py  pyproject.toml  test_setup.py
data/: conditions.csv  observations.csv  patients.csv
src/csv2fhir/: BPS.py  __init__.py  server.py  transformer.py  validator.py
tests/: __init__.py  test_transformer.py  test_validator.py
